# oopGL

./: meson.build  readme.md
include/: app.hpp  buffer.hpp  contiguous_mapped_storage.hpp  contiguous_mapped_storage.tpp  data.hpp  data.tpp  fragment_shader.hpp  geometry_shader.hpp  indexed_object.hpp  initialize.hpp  object.hpp  oopGl.hpp  renderer.hpp  renderer.tpp  shader.hpp  shader.tpp  static_buffer.hpp  static_buffer.tpp  types.hpp  vertex_array.hpp  vertex_attributes.hpp  vertex_attributes.tpp  vertex_shader.hpp  window.hpp
src/: app.cpp  fragment_shader.cpp  object.cpp  shader.cpp  vertex_array.cpp  vertex_shader.cpp  window.cpp
